--- a/src/style.css
+++ b/src/style.css
@@ -554,11 +554,50 @@ body.no-scroll {
 }
 
 /***
-textarea.todo-detail-description:focus,
-input.todo-detail-title:focus {
-    outline: none;
-}
+    CSS FOR ADD PROJECT FORM
 ***/
+
+.add-project-form {
+    border-radius: 20px;
+    width: 500px;
+    height: 100px;
+    padding: 50px 0 50px 0;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+}
+
+.add-project-form input[type=text] {
+    width: 400px;
+    height: 30px;
+    border-radius: 5px;
+    padding: 0 10px;
+}
+
+.add-project-buttons {
+    display: flex;
+    column-gap: 20px;
+}
+
+.add-project-buttons input[type=button] {
+    cursor: pointer;
+    width: 150px;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    transition: 0.4s;
+}
+
+.add-project-buttons input[type=button]:hover {
+    background-color: #659DBD;
+    color: white;
+    transition: 0.4s;
+}
+
+
+
 
 .popup-background {
     position: fixed;
